--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "db:generate": "cd packages/db && npx prisma generate && cd ../..",
+    "start:web": "cd apps/web && bun run start",
+    "start:backend": "cd apps/backend && bun run index.ts",
+    "start:websocket": "cd apps/websocket && bun run index.ts"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
-    "turbo": "^2.5.6",
-    "typescript": "5.9.2"
+    "prettier": "^3.5.0",
+    "turbo": "^2.4.2",
+    "typescript": "5.7.3"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.2.21",
+  "packageManager": "bun@1.2.2",
   "workspaces": [
     "apps/*",
     "packages/*"
