--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -30,5 +30,5 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
           chmod 700 /home/runner/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@43.204.109.64 -t "docker stop user_backend 
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@43.204.109.64 -t "docker stop user_backend 
           && docker run --name user_backend -d -p 8080:8080 aryan32498/todo-app-backend:${{ github.sha }}"
