added deployed step again

--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -28,7 +28,8 @@ jobs:
           tags: aryan32498/todo-app-backend:${{ github.sha }}
       - name: Deploy to the VM
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
-          chmod 700 /home/runner/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@43.204.109.64 -t "docker stop user_backend 
-          && docker run --name user_backend -d -p 8080:8080 aryan32498/todo-app-backend:${{ github.sha }}"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          chmod 600 ~/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@43.204.109.64 \
+          'sudo docker stop user_backend || true && sudo docker rm user_backend ||
+          true && sudo docker run --name user_backend -d -p 8080:8080 aryan32498/todo-app-backend:${{ github.sha }}'
